On mobile, change --hh-fixed-header-height CSS variable value instead of body padding top

--- a/static/less/mobile.less
+++ b/static/less/mobile.less
@@ -17,8 +17,8 @@
 
 @media @responsive {
 
-    body {
-        padding-top: 105px;
+    :root {
+        --hh-fixed-header-height: 105px;
     }
 
     // Layout Contents: Adjusting the contents to fit perfectly on mobile devices
